refactoring google-java-format